# master-project

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_pkl.sh  venv.sh
conf/: example_maschine.py  machine.py
conf/baseline/: r_brpb_brp.py  retrain.py  t1.py  t1_dense.py  t1_dense2.py  t1_sparse.py  t2.py  t2_dense2.py  t2_sparse.py  t_b_b.py  t_brpb_br.py  t_sb_sb.py  t_sp_sp.py  t_sr_sr.py  td_b.py  td_bb.py  td_br.py  td_brp.py  td_brpb.py  test.py  test2.py  ts_b.py  ts_bb.py  ts_bp.py  ts_br.py  ts_brpb.py
conf/baseline1/: t2.py  test.py  z2.py
conf/belt/: t1.py  t2.py  z2.py
conf/common/: evaluator.py
conf/debug/: baseline.py  debug.py
conf/gnn/: r_brpb_brp.py  t1.py  t2.py  t_b_b.py  t_brpb_br.py  t_sb_sb.py  t_sp_sp.py  t_sr_sr.py  td3_brpb_br.py  td3_brpb_brpb.py  td3_sr_sr copy.py  td3_sr_sr.py  td_br_br copy.py  td_br_br.py  td_brpb_br.py  test.py  test2.py  (+3 more)
configs/: base_config.pkl  complete_states.pkl  networks.pkl  states.pkl
hrl/: config_manager.py  master_debug.py  master_eval.py  master_retrain.py  master_test_eval.py  master_train.py
master_project/: dloader.py  master_debug.py  master_eval.py  master_retrain.py  master_test_eval.py  master_train.py
scripts/: debug.py  eval.py  eval_skills.py  generate_configs.py  p_train.py  pkl_integration.py  plot.py  plot_skills.py  retrain.py  skill_eval.py  sweep.py  train.py  train_belt.py  train_tacorl.py
src/: factory.py  hardware.py  variables.py
tests/: target_condition.py  test_condition.py
wandb/: latest-run
(+257 files in other folders)
