[metadata]
name = hrl
version = 0.0.1
author = Jan Gruhnert
description = Implementation of my master project
readme = README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/JRGruhnert/master-project

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    cffi
    Pillow
    pyquaternion
    html-testRunner
    setuptools
    natsort
    matplotlib
    wandb
    pynput
    opencv-python
    opencv-contrib-python
    scikit-image
    numba
    tqdm
    loguru
    jsonpickle
    scikit-learn
    nvitop
    timm
    lovely_numpy
    lovely_tensors
    ipympl
    torch==2.1.0
    tensordict>=0.2.0
    omegaconf
    dill
    pandas
    mplib

[options.packages.find]
where = .
include = *

[options.extras_require]
dev =
    pre-commit
    black==22.1.0
    flake8==4.0.1
    pytest>=7.0

[options.entry_points]
console_scripts =
    train = scripts.train:entry_point
    retrain = scripts.retrain:entry_point
    debug = scripts.debug:entry_point
    plot = scripts.plot:entry_point
    eval = scripts.eval:entry_point